--- a/lose.html
+++ b/lose.html
@@ -26,9 +26,9 @@ body, html {
     color: transparent;
     font-size: 5em;
     font-family: Arial, sans-serif;
-    background: linear-gradient(to right, rgb(255, 0, 0), rgb(0, 255, 0), rgb(0, 0, 255)); /* Couleur change de gauche à droite */
+    background: linear-gradient(to right, rgb(255, 0, 0), rgb(131, 26, 0), rgb(158, 44, 36)); 
     -webkit-background-clip: text;
-    animation: changeColor 5s infinite; /* Animation infinie de 5 secondes */
+    animation: changeColor 5s infinite; 
 }
 
 @keyframes changeColor {
@@ -39,7 +39,7 @@ body, html {
 </head>
 <body>
   <div class="overlay">
-    <div class="message">Congratulations</div>
+    <div class="message">LOSE</div>
   </div>
 </body>
 </html>
