--- a/vch.html
+++ b/vch.html
@@ -13,11 +13,13 @@
             <span class="span">Let's Play</span>
         </div>
         <div class="head">
-            <span class="span">Jouer 1 :</span>
+            <span class="span" style="color: rgb(27, 5, 78);">Jouer 1 :</span>
         </div>
-        <p style="left: 0px;position: relative;text-align: center;font-size: 1.2em;">ecrire un mot :<input type="text" id="mot" style="width: 150px;height: 30px; border: 1px solid black;"><br><input type="button" value="Cache" class="button" onclick="vs1()" style="margin-top: 5px;"></p>
+        <p style="position: relative;left: 90px;font-size: 1.2em;">ecrire un mot :<input type="text" id="mot" style="width: 150px;height: 30px; border: 1px solid black;"><br><input type="button" value="Cache" class="button" onclick="vs1()" style="margin-top: 15px;margin-left: 150px;"></p>
+        <hr>
         <div class="head">
-            <span class="span">Jouer 2 :</span>
+    
+            <span class="span" style="color:rgb(27, 5, 78);">Jouer 2 :</span>
         </div>
         <div class="Menu">
             <table>
