--- a/choi.html
+++ b/choi.html
@@ -4,44 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Choisire votre partie</title>
+    <title>Chois de votre partie</title>
     <style>
-        body {
+    body {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
-}
-
-div {
-    text-align: center;
-    line-height: 20px;
-}
-
-button {
-    margin: 0 10px;
-}
-
-h1 {
-    font-family: Arial, sans-serif;
-    font-size: 24px;
-    color: #333; 
-}
-span{
-    color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 1.5em;
-}
+    }div {
+        text-align: center;
+        line-height: 20px;
+    }button {
+        margin: 0 10px;
+    }h1{
+        font-family: Arial, sans-serif;
+        font-size: 24px;
+        color: #333; 
+    }span{
+        color: white;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 1.5em;
+    }
     </style>
 </head>
 <body>
-    <div>
-        <span style="color: green;">
+    <div class="game" style="text-align: center;">
+        <span style="color:rgb(0, 0, 66);left: -20px;position: relative;font-weight: 1000;text-transform: capitalize;">
             Choisi votre partie 
         </span><br>
-        <a href="index1.html"><button class="button" style="margin-top:50px ;"> 1 VS 1</button></a>
-        <a href="index.html"><button class="button" style="width: 150px;margin-top:50px ;"> 1 VS PC</button></a>
+        <a href="vch.html"><button class="button" style="margin-top:50px ;"> 1 VS 1</button></a>
+        <a href="vspc.html"><button class="button" style="width: 150px;margin-top:50px ;"> 1 VS PC</button></a>
+        <a href="Ruls.html"><button class="button" style="width: 150px;margin-top:50px ;"> Ruls </button></a>
+
     </div>
 </body>
 </html>
