Last Verion OF this code

--- a/vch.html
+++ b/vch.html
@@ -24,49 +24,50 @@
         <div class="Menu">
             <table>
                 <tr id="row1">
-                    <td><input type="text" id="cell11" maxlength="1" onkeyup="moveToNext('cell12')" autofocus></td>
-                    <td><input type="text" id="cell12" maxlength="1" onkeyup="moveToNext('cell13')"></td>
-                    <td><input type="text" id="cell13" maxlength="1" onkeyup="moveToNext('cell14')"></td>
-                    <td><input type="text" id="cell14" maxlength="1" onkeyup="moveToNext('cell15')"></td>
-                    <td><input type="text" id="cell15" maxlength="1"></td>
+                    <td><input type="text" id="cell11" maxlength="1" onkeyup="moveToNext(1,'', 'cell11', 'cell12')"></td>
+                    <td><input type="text" id="cell12" maxlength="1" onkeyup="moveToNext(1,'cell11', 'cell12', 'cell13')"></td>
+                    <td><input type="text" id="cell13" maxlength="1" onkeyup="moveToNext(1,'cell12', 'cell13', 'cell14')"></td>
+                    <td><input type="text" id="cell14" maxlength="1" onkeyup="moveToNext(1,'cell13', 'cell14', 'cell15')"></td>
+                    <td><input type="text" id="cell15" maxlength="1" onkeyup="moveToNext(1,'cell14', 'cell15', '')"></td>
                 </tr>
                 <tr id="row2">
-                    <td><input type="text" id="cell21" maxlength="1" onkeyup="moveToNext('cell22')"></td>
-                    <td><input type="text" id="cell22" maxlength="1" onkeyup="moveToNext('cell23')"></td>
-                    <td><input type="text" id="cell23" maxlength="1" onkeyup="moveToNext('cell24')"></td>
-                    <td><input type="text" id="cell24" maxlength="1" onkeyup="moveToNext('cell25')"></td>
-                    <td><input type="text" id="cell25" maxlength="1"></td>
+                    <td><input type="text" id="cell21" maxlength="1" onkeyup="moveToNext(2,'','cell21','cell22')"></td>
+                    <td><input type="text" id="cell22" maxlength="1" onkeyup="moveToNext(2,'cell21','cell22','cell23')"></td>
+                    <td><input type="text" id="cell23" maxlength="1" onkeyup="moveToNext(2,'cell22','cell23','cell24')"></td>
+                    <td><input type="text" id="cell24" maxlength="1" onkeyup="moveToNext(2,'cell23','cell24','cell25')"></td>
+                    <td><input type="text" id="cell25" maxlength="1" onkeyup="moveToNext(2,'cell24','cell25','')"></td>
                 </tr>
                 <tr id="row3">
-                    <td><input type="text" id="cell31" maxlength="1" onkeyup="moveToNext('cell32')"></td>
-                    <td><input type="text" id="cell32" maxlength="1" onkeyup="moveToNext('cell33')"></td>
-                    <td><input type="text" id="cell33" maxlength="1" onkeyup="moveToNext('cell34')"></td>
-                    <td><input type="text" id="cell34" maxlength="1" onkeyup="moveToNext('cell35')"></td>
-                    <td><input type="text" id="cell35" maxlength="1" ></td>
+                    <td><input type="text" id="cell31" maxlength="1" onkeyup="moveToNext(3,'','cell31','cell32')"></td>
+                    <td><input type="text" id="cell32" maxlength="1" onkeyup="moveToNext(3,'cell31','cell32','cell33')"></td>
+                    <td><input type="text" id="cell33" maxlength="1" onkeyup="moveToNext(3,'cell32','cell33','cell34')"></td>
+                    <td><input type="text" id="cell34" maxlength="1" onkeyup="moveToNext(3,'cell33','cell34','cell35')"></td>
+                    <td><input type="text" id="cell35" maxlength="1" onkeyup="moveToNext(3,'cell34','cell35','')"></td>
                 </tr>
                 <tr id="row4">
-                    <td><input type="text" id="cell41" maxlength="1" onkeyup="moveToNext('cell42')"></td>
-                    <td><input type="text" id="cell42" maxlength="1" onkeyup="moveToNext('cell43')"></td>
-                    <td><input type="text" id="cell43" maxlength="1" onkeyup="moveToNext('cell44')"></td>
-                    <td><input type="text" id="cell44" maxlength="1" onkeyup="moveToNext('cell45')"></td>
-                    <td><input type="text" id="cell45" maxlength="1"></td>
+                    <td><input type="text" id="cell41" maxlength="1" onkeyup="moveToNext(4,'','cell41','cell42')"></td>
+                    <td><input type="text" id="cell42" maxlength="1" onkeyup="moveToNext(4,'cell41','cell42','cell43')"></td>
+                    <td><input type="text" id="cell43" maxlength="1" onkeyup="moveToNext(4,'cell42','cell43','cell44')"></td>
+                    <td><input type="text" id="cell44" maxlength="1" onkeyup="moveToNext(4,'cell43','cell44','cell45')"></td>
+                    <td><input type="text" id="cell45" maxlength="1" onkeyup="moveToNext(4,'cell44','cell45','')" onkeyup="function2()" ></td>
                 </tr>
                 <tr id="row5">
-                    <td><input type="text" id="cell51" maxlength="1" onkeyup="moveToNext('cell52')"></td>
-                    <td><input type="text" id="cell52" maxlength="1" onkeyup="moveToNext('cell53')"></td>
-                    <td><input type="text" id="cell53" maxlength="1" onkeyup="moveToNext('cell54')"></td>
-                    <td><input type="text" id="cell54" maxlength="1" onkeyup="moveToNext('cell55')"></td>
-                    <td><input type="text" id="cell55" maxlength="1" ></td>
+                    <td><input type="text" id="cell51" maxlength="1" onkeyup="moveToNext(5,'','cell51','cell52')"></td>
+                    <td><input type="text" id="cell52" maxlength="1" onkeyup="moveToNext(5,'cell51','cell52','cell53')"></td>
+                    <td><input type="text" id="cell53" maxlength="1" onkeyup="moveToNext(5,'cell52','cell53','cell54')"></td>
+                    <td><input type="text" id="cell54" maxlength="1" onkeyup="moveToNext(5,'cell53','cell54','cell55')"></td>
+                    <td><input type="text" id="cell55" maxlength="1" onkeyup="moveToNext(5,'cell54','cell55','')"></td>
                 </tr>
                 <tr id="row6">
-                    <td><input type="text" id="cell61" maxlength="1" onkeyup="moveToNext('cell62')"></td>
-                    <td><input type="text" id="cell62" maxlength="1" onkeyup="moveToNext('cell63')"></td>
-                    <td><input type="text" id="cell63" maxlength="1" onkeyup="moveToNext('cell64')"></td>
-                    <td><input type="text" id="cell64" maxlength="1" onkeyup="moveToNext('cell65')"></td>
-                    <td><input type="text" id="cell65" maxlength="1"></td>
+                    <td><input type="text" id="cell61" maxlength="1" onkeyup="moveToNext(6,'','cell61','cell62')" ></td>
+                    <td><input type="text" id="cell62" maxlength="1" onkeyup="moveToNext(6,'cell61','cell62','cell63')"></td>
+                    <td><input type="text" id="cell63" maxlength="1" onkeyup="moveToNext(6,'cell62','cell63','cell64')"></td>
+                    <td><input type="text" id="cell64" maxlength="1" onkeyup="moveToNext(6,'cell63','cell64','cell65')"></td>
+                    <td><input type="text" id="cell65" maxlength="1" onkeyup="moveToNext(6,'cell64','cell65','')"></td>
                 </tr>
             </table>
         </div>
+        
         
         <div class="verif">
             <input type="button" value="Check" id="checkButton" onclick="cheak1()" class="button">
