--- a/vspc.html
+++ b/vspc.html
@@ -8,6 +8,16 @@
     <title>Game</title>
 </head>
 <body>
+    <div class="utilisateur">
+        <div class="tran">
+            <img src="home-right.png" alt="" width="50" height="50" style="border-radius: 50px;margin-top: 5px;margin-left: 5px;"> 
+        </div>
+        <div class="tran2">
+            oussema
+            <p id="demo">0 point</p>
+        </div>
+        
+    </div>
     <div class="game">
         <div class="head">
             <span class="span">Let's Play</span>
