Last Verion OF this code<3

--- a/choi.html
+++ b/choi.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="ico.png" type="image/png">
+    
     <title>Chois de votre partie</title>
     <style>
     body {
@@ -40,9 +42,9 @@
   --color-background: #353535;
   --color-outline: #9ee5fa80;
   --color-shadow: #00000080;
-  margin-top: -650px;
+  margin-top: -620px;
   position: absolute;
-  margin-left: 1300px;
+  margin-left: 1250px;
   background: black;
 }
 
