--- a/vch.html
+++ b/vch.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
+    <link rel="icon" href="ico.png" type="image/png">
+
     <title>Game</title>
 </head>
 <body>
