--- a/win.html
+++ b/win.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="index.css">
+  <link rel="icon" href="ico.png" type="image/png">
+    
   <script src="index.js"></script>
   <title>Winner ! ! !</title>
   <style>
